--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="logos.png">
+    <link rel="icon" href="Monad Logo - Default - Logo Mark.png">
     <title>Monad 3D Maze Runner</title>
     <link rel="stylesheet" href="style.css">
 </head>
